Tue Nov 25 21:13:51 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Update link to cygwin FAQ.

Tue Nov 25 01:55:17 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Update details of building Xapian packages.

Tue Nov 25 01:48:44 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: Update for SVN to git migration.

Mon Nov 24 19:50:32 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.3.2.

Mon Nov 24 03:59:02 GMT 2014  Olly Betts <olly@survex.com>

	* languages/Makefile.mk: Add missing '\' at end of line in previous
	  commit.

Mon Nov 24 03:14:22 GMT 2014  Olly Betts <olly@survex.com>

	* languages/: Install the stopword lists as
	  ${pkgdatadir}/stopwords/LANG.list.

Sun Nov 23 23:56:02 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING,INSTALL,NEWS,NEWS.SKELETON,api/compactor.cc,
	  api/replication.cc,backends/Makefile.mk,backends/brass/,
	  backends/databasereplicator.cc,backends/dbcheck.cc,
	  backends/dbfactory.cc,backends/glass/,bin/Makefile.mk,
	  common/Makefile.mk,common/pack.h,common/pretty.h,configure.ac,docs/,
	  include/xapian/,net/replication_protocol.rst,tests/,tests/harness/:
	  Rename 'brass' backend to 'glass'.

Sun Nov 23 22:23:00 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.cc,backends/brass/brass_freelist.h:
	  Set the revision in BrassFreeList::write_block().

Thu Nov 20 21:36:35 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.h: Reset flw_appending when we unpack
	  a freelist.

Thu Nov 20 21:36:15 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.cc: Fix comment typo.

Thu Nov 20 03:53:32 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.cc: Fix end-of-block condition when
	  walking the freelist during database consistency checking.

Thu Nov 20 02:32:37 GMT 2014  Olly Betts <olly@survex.com>

	* backends/brass/brass_freelist.cc: Wrap comment line.

Thu Nov 20 02:31:54 GMT 2014  Olly Betts <olly@survex.com>
